putting basic content up for testing

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+
+    <div class="container">
+        <li>
+            <img class="materialboxed" width="650" src="assets/space.tif">
+            <div class="caption left-align">
+                <h3>Alexander Anelli</h3>
+                <h5 class="light grey-text text-lighten-3">Please hire me</h5>
+            </div>
+        </li>
+    </div>
 </body>
 
 </html>
