--- a/index.html
+++ b/index.html
@@ -2,13 +2,6 @@
 <html>
 
 <head>
-
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -16,22 +9,54 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="globalCSS.css">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
 </head>
 
 <body>
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col s4 offset-s4">
+                <div class="card verticalcenterpls">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/avatar.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Alex Anelli<i class="material-icons right">more_vert</i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4 center-align">Alex Anelli<i class="material-icons right">close</i></span>
+                        <div>
+                            <h5 class="center-align">I like cool stuff</h5>
+                        </div>
+                        <div class="fixed-action-btn horizontal click-to-toggle">
+                            <a class="btn-floating btn-large red">
+                                <i class="large material-icons">view_module</i>
+                            </a>
+                            <ul>
+                                <li><a class="btn-floating yellow darken-1"><i class="material-icons">open_in_browser</i></a></li>
+                                <li><a class="btn-floating green"><i class="material-icons">open_in_browser</i></a></li>
+                                <li><a class="btn-floating blue"><i class="material-icons">open_in_browser</i></a></li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 
-    <div class="container">
-        <li>
-            <img class="materialboxed" width="650" src="assets/space.tif">
-            <div class="caption left-align">
-                <h3>Alexander Anelli</h3>
-                <h5 class="light grey-text text-lighten-3">Please hire me</h5>
-            </div>
-        </li>
-    </div>
 </body>
 
 </html>
