--- a/index.html
+++ b/index.html
@@ -21,30 +21,16 @@
     <div class="container">
 
         <div class="row">
-            <div class="col s4 offset-s4">
-                <div class="card verticalcenterpls">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/avatar.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Alex Anelli<i class="material-icons right">more_vert</i></span>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4 center-align">Alex Anelli<i class="material-icons right">close</i></span>
-                        <div>
-                            <h5 class="center-align">I like cool stuff</h5>
+            <div class="col s6 offset-s3">
+                <div class="row">
+                    <div class="card verticalcenterpls z-depth-5">
+                        <div class="card-image">
+                            <img src="images/avatar.jpg">
+                            <span class="card-title centered">Alexander Anelli</span>
                         </div>
-                        <div class="fixed-action-btn horizontal click-to-toggle">
-                            <a class="btn-floating btn-large red">
-                                <i class="large material-icons">view_module</i>
-                            </a>
-                            <ul>
-                                <li><a class="btn-floating yellow darken-1"><i class="material-icons">open_in_browser</i></a></li>
-                                <li><a class="btn-floating green"><i class="material-icons">open_in_browser</i></a></li>
-                                <li><a class="btn-floating blue"><i class="material-icons">open_in_browser</i></a></li>
-                            </ul>
+                        <div class="card-action">
+                            <a href="#">link here</a>
                         </div>
-
                     </div>
                 </div>
             </div>
