--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="libs/materialize/css/materialize.min.css" media="screen,projection" />
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="globalCSS.css">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-    <link rel="stylesheet" href="fontAwesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="libs/fontAwesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
@@ -21,29 +21,31 @@
     <div class="container">
 
         <div class="row">
-            <div class="col s6 offset-s3">
+            <div class="col s8 offset-s2">
                 <div class="row">
                     <div class="card verticalcenterpls z-depth-5">
                         <div class="card-image">
                             <img src="images/avatar.jpg">
-                            <span class="card-title centered">Alexander Anelli</span>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">link here</a>
+                            <span class="card-content">
+                                <h5 class="center-align">Alexander Anelli</h5>
+                            </span>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
+        <div class="row"></div>
+        <div class="row center-align">
+            <a href="https://www.linkedin.com/in/alex-anelli-84878246" target="_blank" class="btn-floating btn-large waves-effect waves-light blue  hoverable center-align"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a href="https://github.com/xanderrman" target="_blank" class="btn-floating btn-large waves-effect waves-light black push-s6 hoverable"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <a href="sampleres.pdf" target="_blank" class="btn-floating btn-large waves-effect waves-light orange push-s9 hoverable"><i class="fa fa-file-text-o" aria-hidden="true"></i></a>
+        </div>
 
-
-    </div>
-
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+        <!--Import jQuery before materialize.js-->
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="js/materialize.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 
 </body>
 
