--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="card-image">
                             <img src="images/avatar.jpg">
                             <span class="card-content">
-                                <h5 class="center-align">Alexander Anelli</h5>
+                                <h5 class="center-align">Alex Anelli</h5>
                             </span>
                         </div>
                     </div>
@@ -37,8 +37,7 @@
         <div class="row"></div>
         <div class="row center-align">
             <a href="https://www.linkedin.com/in/alex-anelli-84878246" target="_blank" class="btn-floating btn-large waves-effect waves-light blue  hoverable center-align"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            <a href="https://github.com/xanderrman" target="_blank" class="btn-floating btn-large waves-effect waves-light black push-s6 hoverable"><i class="fa fa-github" aria-hidden="true"></i></a>
-            <a href="alex-anelli-resume.pdf" target="_blank" class="btn-floating btn-large waves-effect waves-light orange push-s9 hoverable"><i class="fa fa-file-text-o" aria-hidden="true"></i></a>
+            <a href="https://github.com/alexanelli" target="_blank" class="btn-floating btn-large waves-effect waves-light black push-s6 hoverable"><i class="fa fa-github" aria-hidden="true"></i></a>
         </div>
 
         <!--Import jQuery before materialize.js-->
